# git-ai-commit

./: .gitignore  LICENSE  README.md  git-ai-commit.plugin.zsh  git_ai_commit.py  pyproject.toml  setup.py
config/: default_config.json  default_config.yaml
oh-my-zsh-plugin/: git-ai-commit.plugin.zsh  git_ai_commit.py  install.sh
scripts/: install.sh
src/: ai_suggester.py  cli.py  config_manager.py  git_ai_commit.py  git_handler.py  shell_integration.py
